# itertools

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py  conaninfo.txt  graph_info.json
include/itertools/: itertools.hpp  math.hpp  range_container.hpp  range_iterator.hpp  tmp.py  to_string.hpp  tupletools.hpp  types.hpp
include/itertools/algorithm/: all.hpp  begin_end.hpp  equal.hpp  find_if.hpp  to.hpp
include/itertools/views/: all.hpp  block.hpp  concat.hpp  drop_while.hpp  enumerate.hpp  filter.hpp  flatten.hpp  intersperse.hpp  iota.hpp  join.hpp  range.hpp  reverse.hpp  slice.hpp  stride.hpp  transform.hpp  zip.hpp
python/: partitions.py  sorting.py  tests.py
src/: generator.hpp  itertools.hpp  math.hpp  range_container.hpp  tmp.txt  tupletools.hpp  types.hpp
tests/: CMakeLists.txt  example.cpp  math_tests.cpp  tests.cpp  toasts.cpp
tests/itertools/: test.cpp
